# DESSAUX_Damien_ECF5

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile.api  Dockerfile.trainer  README.md  docker-compose.yaml  main.py  pyproject.toml  run_api.py  run_train.py
.github/workflows/: ci.yaml  release.yaml
api/: main.py  model_loader.py  schemas.py  settings.py
churnguard/: data.py  evaluate.py  pipeline.py  train.py
tests/: test_data.py  test_evaluate.py  test_train.py
