[project]
name = "dessaux-damien-ecf5"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "mlflow>=3.12.0",
    "numpy>=2.4.4",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
]

[dependency-groups]
dev = [
    "mypy>=1.20.2",
    "pandas-stubs>=3.0.0.260204",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
    "types-requests>=2.33.0.20260503",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["churnguard"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort
    "B",   # bugbear
    "UP",  # pyupgrade
    "C90", # mccabe complexity
    "N",   # naming
    "ANN", # type annotations
    "D",   # docstrings (optionnel mais utile en MLOps)
]
ignore = [
    "ANN101",  # self typing (inutile en pratique)
    "D100", "D104",  # tolérance modules/packages
]

fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.13"
strict = true

ignore_missing_imports = true
disable_error_code = [
    "untyped-decorator",
]
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true

files = ["churnguard"]
